Perkin-UAT/force-app/main/default/objects/BD_Trained_Skill__c/BD_Trained_Skill__c.object-meta.xml
<CustomObject>
    <description>This object is used to join existing skills to training courses.</description>
    <label>Trained Skill</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Trained Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trained Skill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>