Perkin-UAT/force-app/main/default/objects/BD_Trained_Skill__c/fields/BD_Related_Training_Course__c.field-meta.xml
<CustomField>
    <fullName>BD_Related_Training_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Training Course</label>
    <referenceTo>BD_Training_Course__c</referenceTo>
    <relationshipLabel>Trained Skills</relationshipLabel>
    <relationshipName>Trained_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>