Perkin-UAT/force-app/main/default/objects/BD_Trained_Skill__c/fields/BD_Skill__c.field-meta.xml
<CustomField>
    <fullName>BD_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>SVMXC__Skill__c</referenceTo>
    <relationshipLabel>Trained Skill</relationshipLabel>
    <relationshipName>Trained_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>