Perkin-UAT/force-app/main/default/objects/BD_Trained_Skill__c/fields/SMAX_PS_Training_Course_Title__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Training_Course_Title__c</fullName>
    <formula>BD_Related_Training_Course__r.SMAX_PS_Course_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Course Title</label>
    <type>Text</type>
</CustomField>