Perkin-UAT/force-app/main/default/objects/BD_Trained_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_Skill__c</columns>
    <columns>SMAX_PS_Training_Course_Title__c</columns>
    <columns>BD_Related_Training_Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>